<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Clock</string>
    <string name="label">Label</string>
    <string name="default_label">Alarm</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="ringtone">Ringtone</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_dismiss_now_text">Dismiss Now</string>
    <string name="alarm_missed_title">Missed alarm</string>
    <string name="alarm_missed_text"><xliff:g id="alarm_time">%s</xliff:g> - <xliff:g id="alarm_label">%s</xliff:g></string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <plurals name="alarm_alert_snooze_set">

        
        <item quantity="one">Snoozing for 1 minute.</item>
        
        <item quantity="other">Remind me <xliff:g id="minutes">%d</xliff:g> mins later.</item>
    </plurals>
    <string name="alarm_alert_snooze_until">Snoozing until <xliff:g id="time">%s</xliff:g></string>
    <string name="alarm_alert_predismiss_title">Upcoming alarm</string>
    <string name="missed_alarm_has_been_deleted">Your missed alarm has been deleted</string>
    <string-array name="timer_notifications">
        <item>Less than a minute remaining</item>
        <item><xliff:g id="HOURS" example="2 hours">%1$s</xliff:g> remaining</item>
        <item><xliff:g id="MINUTES" example="2 minutes">%2$s</xliff:g> remaining</item>
        <item><xliff:g id="HOURS" example="2 hours">%1$s</xliff:g><xliff:g id="MINUTES" example="2 minutes">%2$s</xliff:g> remaining</item>
    </string-array>
    <string-array name="alarm_set">
        <item>Alarm set for less than 1 minute from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g>, <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>, and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
    </string-array>
    <string-array name="alarm_set_tmp">
    <item msgid="6450913786084215050">"Less than 1 minute from now"</item>
    <item msgid="6002066367368421848">"<xliff:g id="DAYS">%1$s</xliff:g> from now"</item>
    <item msgid="8824719306247973774">"<xliff:g id="HOURS">%2$s</xliff:g> from now"</item>
    <item msgid="8182406852935468862">"<xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> from now"</item>
    <item msgid="2532279224777213194">"<xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
    <item msgid="5936557894247187717">"<xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
    <item msgid="9115697840826129603">"<xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
    <item msgid="2332583385137381060">"<xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
  </string-array>
    <string name="day">"1 day"</string>
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>
    <string name="hour">1 hour</string>
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>
    <string name="minute">"1 minute"</string>
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>
    <string name="every_day">Every day</string>
    <string name="weekend">Weekend</string>
    <string name="working_day">Working day</string>
    <string name="working_day_desc">"Selected,remind in legal working day"</string>
    <string name="weekday">Mon to Fri</string>
    <string name="once">Once</string>
    <string name="one">Mon</string>
    <string name="two">Tue</string>
    <string name="three">Wed</string>
    <string name="four">Thu</string>
    <string name="five">Fri</string>
    <string name="six">Sat</string>
    <string name="seven">Sun</string>
    <string name="never">Never</string>
    <string name="day_concat">", "</string>
    <string name="settings">Settings</string>
    <string name="alarm_settings">Alarm Settings</string>
    <string name="snooze_duration_title">Snooze interval</string>
    <plurals name="snooze_duration">

        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%d</xliff:g> minutes</item>
    </plurals>
    <plurals name="snooze_picker_label">

        
        <item quantity="one">minute</item>
        
        <item quantity="other">minutes</item>
    </plurals>
    <string name="auto_silence_title">Stop alerting after</string>
    <string name="auto_silence_summary"><xliff:g id="minutes">%d</xliff:g> minutes</string>
    <string name="auto_silence_never">Never</string>
    <string-array name="auto_silence_entries">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>Never</item>
    </string-array>
    <string name="timer_10minutes">"10 mins"</string>
    <string name="timer_15minutes">"15 mins"</string>
    <string name="timer_30minutes">"30 mins"</string>
    <string name="timer_45minutes">"45 mins"</string>
    <string-array name="auto_silence_values" translatable="false">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>-1</item> 
    </string-array>
    <string name="silent_alarm_summary">Silent</string>
    <string name="label_description">Label</string>
    <string name="timer_ring_service_desc">Sound playback service for timers set in Clock.</string>
    <string name="control_set_alarm_with_existing"><xliff:g id="time">%s</xliff:g></string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_clock">Clock</string>
    <string name="menu_stopwatch">Stopwatch</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_help">Help</string>
    <string name="selected_cities_label">Selected Cities</string>
    <string name="sw_start_button">Start</string>
    <string name="sw_stop_button">Stop</string>
    <string name="sw_lap_button">Lap</string>
    <string name="sw_reset_button">Reset</string>
    <string name="hours_label">h</string>
    <string name="minutes_label">m</string>
    <string name="seconds_label">s</string>
    <string name="hours_label_description">hours</string>
    <string name="minutes_label_description">minutes</string>
    <string name="seconds_label_description">seconds</string>
    <string name="sw_share_main">My time is <xliff:g id="time">%s</xliff:g></string>
    <string name="sw_share_laps">Lap times:</string>
    <string name="sw_notification_lap_number">Lap <xliff:g id="number">%d</xliff:g></string>
    <string-array name="stopwatch_format_set" translatable="false">
        <item> 
<xliff:g id="M">%2$02d</xliff:g> &#x200E;<xliff:g id="S">%3$02d</xliff:g><xliff:g id="decimal_separator">%5$c</xliff:g><xliff:g id="D">%4$02d</xliff:g></item>
        <item> 
<xliff:g id="M">%2$02d</xliff:g> &#x200E;<xliff:g id="S">%3$02d</xliff:g><xliff:g id="decimal_separator">%5$c</xliff:g><xliff:g id="D">%4$02d</xliff:g></item>
        <item> 
<xliff:g id="H">%1$02d</xliff:g> &#x200E;<xliff:g id="M">%2$02d</xliff:g> &#x200E;<xliff:g id="S">%3$02d</xliff:g><xliff:g id="decimal_separator">%5$c</xliff:g><xliff:g id="D">%4$02d</xliff:g></item>
        <item> 
<xliff:g id="H">%1$02d</xliff:g> &#x200E;<xliff:g id="M">%2$02d</xliff:g> &#x200E;<xliff:g id="S">%3$02d</xliff:g><xliff:g id="decimal_separator">%5$c</xliff:g><xliff:g id="D">%4$02d</xliff:g></item>
        <item> 
<xliff:g id="H">%1$03d</xliff:g> &#x200E;<xliff:g id="M">%2$02d</xliff:g> &#x200E;<xliff:g id="S">%3$02d</xliff:g><xliff:g id="decimal_separator">%5$c</xliff:g><xliff:g id="D">%4$02d</xliff:g></item>
    </string-array>
    <string-array name="shared_laps_format_set" translatable="false">
        <item> 
<xliff:g id="lap">%6$d</xliff:g><xliff:g id="decimal_separator">%5$c</xliff:g> &#x200E;<xliff:g id="M">%2$d</xliff:g> &#x200E;<xliff:g id="S">%3$02d</xliff:g><xliff:g id="decimal_separator">%5$c</xliff:g><xliff:g id="D">%4$02d</xliff:g></item>
        <item> 
<xliff:g id="lap">%6$d</xliff:g><xliff:g id="decimal_separator">%5$c</xliff:g> &#x200E;<xliff:g id="M">%2$02d</xliff:g> &#x200E;<xliff:g id="S">%3$02d</xliff:g><xliff:g id="decimal_separator">%5$c</xliff:g><xliff:g id="D">%4$02d</xliff:g></item>
        <item> 
<xliff:g id="lap">%6$d</xliff:g><xliff:g id="decimal_separator">%5$c</xliff:g> &#x200E;<xliff:g id="H">%1$d</xliff:g> &#x200E;<xliff:g id="M">%2$02d</xliff:g> &#x200E;<xliff:g id="S">%3$02d</xliff:g><xliff:g id="decimal_separator">%5$c</xliff:g><xliff:g id="D">%4$02d</xliff:g></item>
        <item> 
<xliff:g id="lap">%6$d</xliff:g><xliff:g id="decimal_separator">%5$c</xliff:g> &#x200E;<xliff:g id="H">%1$02d</xliff:g> &#x200E;<xliff:g id="M">%2$02d</xliff:g> &#x200E;<xliff:g id="S">%3$02d</xliff:g><xliff:g id="decimal_separator">%5$c</xliff:g><xliff:g id="D">%4$02d</xliff:g></item>
        <item> 
<xliff:g id="lap">%6$d</xliff:g><xliff:g id="decimal_separator">%5$c</xliff:g> &#x200E;<xliff:g id="H">%1$03d</xliff:g> &#x200E;<xliff:g id="M">%2$02d</xliff:g> &#x200E;<xliff:g id="S">%3$02d</xliff:g><xliff:g id="decimal_separator">%5$c</xliff:g><xliff:g id="D">%4$02d</xliff:g></item>
    </string-array>
    <string-array name="sw_lap_number_set" translatable="false">
        <item><xliff:g id="number">%d</xliff:g>.</item>
        <item><xliff:g id="number">%02d</xliff:g>.</item>
    </string-array>
    <plurals name="Nhours_description">

        
        <item quantity="one">1 hour</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="Nminutes_description">

        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%d</xliff:g> minutes</item>
    </plurals>
    <plurals name="Nseconds_description">

        
        <item quantity="one">1 second</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%d</xliff:g> seconds</item>
    </plurals>
    <string name="timer_add_timer">Add Timer</string>
    <string name="timer_start">Start</string>
    <string name="timer_delete">Delete</string>
    <string name="timer_plus_one">Add 1 Minute</string>
    <string name="timer_plus_1_min">Add 1 min</string>
    <string name="timer_stop">Pause</string>
    <string name="timer_done">Done</string>
    <string name="timer_reset">Reset</string>
    <string name="timer_cancel">Cancel</string>
    <string name="timer_times_up">Time\'s up</string>
    <string name="automatic_home_clock">Automatic home clock</string>
    <string name="automatic_home_clock_summary">While traveling in an area where the time is different, add a clock for home</string>
    <string name="home_time_zone">Home time zone</string>
    <string name="home_time_zone_title">Home time zone</string>
    <string name="add_alarm_button_text">"Add"</string>
    <string name="stopwatch_notification_title">Stopwatch</string>
</resources>