<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">
        <TimePicker
            android:id="@+id/timePicker"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!-- <com.android.deskclock.SetAlarmView
            android:id="@+id/circle_time_set"
            android:layout_width="match_parent"
            android:layout_height="310dp"/>
        <TextView
            android:id="@+id/textClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="60dp"
            android:textColor="@color/text_clock_color"/>
        <TextView
            android:id="@+id/am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/clock_am"
            android:textSize="16dp"
            android:textColor="@color/grey"/>
         <Button
            android:id="@+id/pm"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:textColor="@color/grey"
            android:text="@string/clock_pm"
            android:textSize="12sp"/> -->
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:layout_gravity="bottom">
        <View
            android:id="@+id/separator1"
            android:layout_gravity="bottom"
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/separator_color" />
        <FrameLayout
            android:id="@+id/label_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_alarm_option_item_height"
            android:clickable="true"
            android:background="@drawable/alarm_item_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label"
                android:textSize="16sp"
                android:textColor="@color/alarm_edit_item_text"
                android:layout_marginStart="16dp"
                android:layout_gravity="start|center_vertical"/>
            <TextView
                android:id="@+id/alarm_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/default_label"
                android:textSize="16sp"
                android:textColor="@color/alarm_edit_item_text"
                android:singleLine="true"
                android:textAlignment="textEnd"
                android:maxWidth="100dp"
                android:ellipsize="end"
                android:layout_marginEnd="16dp"
                android:layout_gravity="end|center_vertical"/>
        </FrameLayout>
        <View
            android:id="@+id/separator2"
            android:layout_gravity="bottom"
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/separator_color" />
        <FrameLayout
            android:id="@+id/ringtong_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_alarm_option_item_height"
            android:clickable="true"
            android:background="@drawable/alarm_item_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ringtone"
                android:textSize="16sp"
                android:textColor="@color/alarm_edit_item_text"
                android:layout_marginStart="16dp"
                android:layout_gravity="start|center_vertical"/>
            <TextView
                android:id="@+id/music_choosed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/alarm_edit_item_text"
                android:singleLine="true"
                android:textAlignment="textEnd"
                android:maxWidth="150dp"
                android:ellipsize="end"
                android:layout_marginEnd="16dp"
                android:layout_gravity="end|center_vertical"/>
        </FrameLayout>
        <View
            android:id="@+id/separator3"
            android:layout_gravity="bottom"
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/separator_color" />
        <FrameLayout
            android:id="@+id/vibrate_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_alarm_option_item_height"
            android:clickable="true"
            android:background="@drawable/alarm_item_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_vibrate"
                android:textSize="16sp"
                android:textColor="@color/alarm_edit_item_text"
                android:layout_marginStart="16dp"
                android:layout_gravity="start|center_vertical"/>
           <CheckBox
                 android:id="@+id/check_vibrate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:background="@null"
                 android:layout_gravity="end|center_vertical"/>
        </FrameLayout>
        <View
            android:id="@+id/separator4"
            android:layout_gravity="bottom"
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/separator_color" />
        <FrameLayout
            android:id="@+id/repeat_days"
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_alarm_option_item_height"
            android:clickable="true"
            android:background="@drawable/alarm_item_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_repeat"
                android:textSize="16sp"
                android:textColor="@color/alarm_edit_item_text"
                android:layout_marginStart="16dp"
                android:layout_gravity="start|center_vertical"/>
             <CheckBox
                 android:id="@+id/check_repeat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:background="@null"
                 android:layout_gravity="end|center_vertical"/>
        </FrameLayout>

        <View
            android:id="@+id/separator5"
            android:layout_gravity="bottom"
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/separator_color" />

        <FrameLayout
            android:id="@+id/numofweek"
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_alarm_option_item_height"
            android:visibility="invisible" >

            <Button
                android:id="@+id/roundBtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/btnshape_white"
                android:gravity="center"
                android:text="@string/seven"
                android:textColor="@color/repeat_green" />

            <Button
                android:id="@+id/roundBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="66dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/btnshape_white"
                android:gravity="center"
                android:text="@string/one"
                android:textColor="@color/repeat_green" />

            <Button
                android:id="@+id/roundBtn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="113dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/btnshape_white"
                android:gravity="center"
                android:text="@string/two"
                android:textColor="@color/repeat_green" />

            <Button
                android:id="@+id/roundBtn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/btnshape_white"
                android:gravity="center"
                android:text="@string/three"
                android:textColor="@color/repeat_green" />

            <Button
                android:id="@+id/roundBtn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="207dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/btnshape_white"
                android:gravity="center"
                android:text="@string/four"
                android:textColor="@color/repeat_green" />

            <Button
                android:id="@+id/roundBtn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="254dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/btnshape_white"
                android:gravity="center"
                android:text="@string/five"
                android:textColor="@color/repeat_green" />

            <Button
                android:id="@+id/roundBtn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="301dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/btnshape_white"
                android:gravity="center"
                android:text="@string/six"
                android:textColor="@color/repeat_green" />
        </FrameLayout>

        <View
            android:id="@+id/separator6"
            android:layout_gravity="bottom"
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:visibility="invisible"
            android:background="@color/separator_color" />
        <FrameLayout
            android:id="@+id/legalworkday"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:clickable="true"
            android:visibility="invisible"
            android:background="@drawable/alarm_item_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/working_day"
                android:textSize="16sp"
                android:textColor="@color/alarm_edit_item_text"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/working_day_desc"
                android:textSize="14sp"
                android:textColor="#999999"
                android:layout_marginStart="16dp"
                android:layout_marginTop="38dp"
                android:layout_gravity="start"/>
            <CheckBox
                 android:id="@+id/check_legal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:background="@null"
                 android:layout_gravity="end|center_vertical"/>
        </FrameLayout>
        <View
            android:id="@+id/separator7"
            android:layout_gravity="bottom"
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:visibility="invisible"
            android:background="@color/separator_color" />
        </LinearLayout>
</LinearLayout>
